2006-07-03  Peter Bienstman <Peter.Bienstman@UGent.be>

	* stack2.py: Update again.
	* PhC_splitter.py: Ditto.

2006-04-25  Peter Bienstman <Peter.Bienstman@UGent.be>

	* stack2.py: Update for higher Mueller precision.
	* PhC_splitter.py: Ditto.

2006-02-17  Peter Bienstman <Peter.Bienstman@UGent.be>

	* slab3.py: New test.
	
2006-02-08  Peter Bienstman <Peter.Bienstman@UGent.be>

	* backward3.py: New test.

2006-02-07  Peter Bienstman <Peter.Bienstman@UGent.be>

	* backward2.py: New test.

2005-11-29  Peter Debackere <Peter.Debackere@UGent.be>

	* surface_plasmon.py: New test.

2005-06-13  Peter Bienstman <Peter.Bienstman@UGent.be>

	* polariton2.py: Update.

2005-02-14  Peter Bienstman <Peter.Bienstman@UGent.be>

	* w1reson.py: New test.

2005-02-03  Peter Bienstman <Peter.Bienstman@UGent.be>

	* blochstack.py: New test.

2005-01-26  Peter Bienstman <Peter.Bienstman@UGent.be>

	* shift.py: New test.

2004-06-03  Peter Bienstman <Peter.Bienstman@UGent.be>

	* planar_VCSEL.py: New test.

2004-04-16  Peter Bienstman <Peter.Bienstman@UGent.be>

	* backward.py: New test.

2003-08-08  Peter Bienstman <Peter.Bienstman@UGent.be>

	* polariton2.py: New test.

2003-08-06  Peter Bienstman <Peter.Bienstman@UGent.be>

	* sudbo.py: New test.

2003-08-01  Peter Bienstman <Peter.Bienstman@UGent.be>

	* slab2.py: New test.
	* stack2.py: Ditto.
	* degenerate2.py: Ditto.
	* grating3.py: Ditto.

2003-02-28  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* field.py: New test.
	* fw_bw.py: Ditto.
	* slab.py: Ditto.

2003-02-05  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* stack1.py: New test.

2003-01-31  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* stack0.py: New test.

2002-10-30  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* coupled.py: New test.

2002-06-06  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* dent.py: New test.

2002-06-05  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* wg.py: New test.

2002-06-04  Peter Bienstman <Peter.Bienstman@rug.ac.be>
