@@ -1,3 +1,8 @@
+2006-08-04  Peter Bienstman <Peter.Bienstman@UGent.be>
+
+	* section1.py: New test.
+	* section2.py: Ditto.
+
 2006-07-03  Peter Bienstman <Peter.Bienstman@UGent.be>
 
 	* stack2.py: Update again.
